dons_tests/valid_kxi/scope_class.kxi
class MyClass { 
    public int x;
    MyClass(int a, int b) {}
    public void myfunc() {
        x = 4;
    }
}
void main(){}
