dons_tests/invalid_kxi/double_dec_mix.kxi

            class MyClass { 
                public int x;
                static public char y;
                MyClass(int a, int b) {}
                public int[] myfunc() {}
                public string x() {}
            }
            void main(){}
